fix(preparation): Set the default alignment to left for preparation step list

--- a/src/blocks/block/style.scss
+++ b/src/blocks/block/style.scss
@@ -268,6 +268,7 @@
     margin: 0 0 1rem 0;
     padding: 0;
     counter-reset: foodblogkitchen-toolkit-steps;
+    text-align: left;
 
     li {
       display: block;
